--- a/sass/_footerTop.scss
+++ b/sass/_footerTop.scss
@@ -1,7 +1,7 @@
 .footerTop{
     width: 100%;
     height: 500px;
-    background-image: url('/img/footer.webp');
+    background-image: url('imgg/footer.webp');
     background-position: center center;
     background-size: cover;
     display: flex;
