--- a/sass/_sectionOne.scss
+++ b/sass/_sectionOne.scss
@@ -1,7 +1,7 @@
 .one{
     width: 100%;
     height: 600px;
-    background-image: url('/img/sec1bg.webp');
+    background-image: url('imgg/sec1bg.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
